kubernetes-networks/canary/web-deploy_canary.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-canary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-canary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      name: web-canary
      labels:
        app: web-canary
    spec:
      containers:
        - name: otus-kub-intro
          image: mikeq123/otus_kub_course:intro
          volumeMounts:
            - name: app
              mountPath: /app
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
      volumes:
        - name: app
          emptyDir: {}
